# bee

./: Cargo.toml  justfile  package-lock.json  schema.sql  wrangler.toml
src/: auth.rs  database.rs  lib.rs  markup.rs  routes.rs  sessions.rs  ticket.rs  user.rs
src/markup/: landing.rs  mod.rs  ticket.rs
src/models/: mod.rs  ticket.rs  user.rs
src/routes/: mod.rs  qr.rs  ticket.rs
static/: helpers.js  main.css
