[package]
name = "bee"
version = "0.1.0"
edition = "2021"
authors = [ "Joe <joe.gloach@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=["http", "axum", "d1"] }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }

tower-service = "0.3.3"
axum = { version = "0.8.1", default-features = false, features = ["form", "macros", "json", "query"] }
axum-htmx = "0.7.0"
axum-extra = { version = "0.10.0", features = ["cookie"] }
maud = { version = "0.27.0", features = ["axum"] }

fast_qr = { version = "0.12.7", features = ["svg"] }

itertools = "0.14.0"
uuid = { version = "1.15.1", features = ["v4", "serde", "js"] }
serde = { version = "1.0.219", features = ["derive"] }

tracing = "0.1.41"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3", features=["time", "json"] }
time = { version = "0.3.39", features=["wasm-bindgen", "serde", "formatting", "macros", "serde-human-readable"] }

async-channel = "2.3.1"
oneshot = "0.1.11"
argon2 = { version = "0.5.3", features = ["password-hash"] }
# pinned to 0.3.1 as it shares the same rand_core as password-hash
rand_chacha = "0.3.1"
async-trait = "0.1.87"
js-sys = "0.3.77"
serde_json = "1.0.140"
